# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabotautomerge.yml
pre_commit_hooks/: mypy.py  poetry.py  shellcheck.py  util.py  uv.py
scripts/: lock-all.sh  retag.sh  setup-uv.sh  tag.sh
tests/: test_util.py
